--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ Django==2.0.4
 django-debug-toolbar==1.9.1
 django-model-utils==3.1.1
 djangorestframework==3.8.2
+memory-profiler==0.52.0
+psutil==5.4.5
 psycopg2==2.7.4
 psycopg2-binary==2.7.4
 PyJWT==1.6.1
